18_reverse_str/grade.txt
Grading at Thu Mar 25 17:31:54 UTC 2021
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:8:7: error: ‘l’ undeclared (first use in this function)
   if (l > 0 && str != NULL){
       ^
reverse.c:8:7: note: each undeclared identifier is reported only once for each function it appears in
The code did not compile!

Overall Grade: F
